When a user creates a new bookmark folder make that the current item.

BUG: 152158
REVIEW: 114479
FIXED-IN: 4.12.1